--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,22 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+## Data Structure
+
+User:
+  username
+  full_name
+
+Experience:
+  summary
+  detail
+  start_time
+  end_time
+
+Skill:
+  name
+  description
+
+user has many experiences
+user has many skills
